--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <li><b>Nombre: </b>Gabriel Jesús Bustillos Fierro.</li>
                         <li><b>Teléfono: </b>635-104-4096.</li>
                         <li><b>Dirección: </b>Calle Nueva Frontera #9510 Chihuahua,Chih.</li>
-                        <li><b>Email: </b>gabribufi@gmail.com</li>
+                        <li><b>Email: </b>gabribufi@gmail.com, a353267@uach.mx</li>
                     </ul>
                 </div>
                 <div>
@@ -45,13 +45,6 @@
                         <li>Diseño, administración e implementación de redes LAN. </li>
                     </li>
                 </ul>
-                <ul>
-                    <li>
-                        <h3>Conductor</h3>
-                        <h4>Uber eats - 2022 a 2023.</h4>
-                        <li>Recolectando y realizando entregas en diferentes puntos de la ciudad.</li>
-                    </li>
-                </ul>
             </section>
     
             <section class="education" id="edu">
@@ -64,7 +57,6 @@
                     <li>
                         <h3>Certificación en introducción al hacking ético</h3>
                         <p>Mastermind - Junio 2022 a Agosto 2022.</p>
-                        <p><a href="https://www.mastermind.ac/certificates/mi9d49c8eb">Certificado</a></p>
                     </li>
                     <li>
                         <h3>Técnico en soporte y mantenimiento a equipos de cómputo</h3>
@@ -113,16 +105,16 @@
                         <h3>Hacking de redes inalámbricas.</h3>
                     </li>
                     <li>
-                        <h3>Python.</h3>
+                        <h3>Python, JavaScript y C.</h3>
                     </li> 
                     <li>
-                        <h3>MySQL.</h3>
+                        <h3>MySQL, MongoDB</h3>
                     </li>
                     <li>
-                        <h3>Sistemas unix.</h3>
+                        <h3>Sistemas linux.</h3>
                     </li>
                     <li>
-                        <h3>Frontend HTML, CSS Y JS.</h3>
+                        <h3>Frontend HTML y CSS.</h3>
                     </li>
                     <li>
                         <h3>Github, Gitlab y Bitbucket.</h3>
